--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#f38181">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
@@ -28,21 +29,21 @@
           <img src="./images/blank-profile-picture.png" class="user-picture__img" alt="User profile picture" />
         </div>
         <div class="user-info">
-          <h1 class="user-info__name"></h1>
-          <a class="user-info__login" href="#"></a>
+          <h1 class="user-info__name">.</h1>
+          <a class="user-info__login" href="#">.</a>
           <p class="user-info__bio"></p>
           <p class="user-info__register"></p>
           <ul class="user-info__stats">
             <li>
-              <h4 class="user-info__title">Repos</h4>
+              <h2 class="user-info__title">Repos</h2>
               <p id="no-repos"></p>
             </li>
             <li>
-              <h4 class="user-info__title">Gists</h4>
+              <h2 class="user-info__title">Gists</h2>
               <p id="no-gists"></p>
             </li>
             <li>
-              <h4 class="user-info__title">Followers</h4>
+              <h2 class="user-info__title">Followers</h2>
               <p id="no-followers"></p>
             </li>
           </ul>
@@ -69,7 +70,7 @@
                   d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z">
                 </path>
               </svg>
-              <a id="data-blog" href="#"></a>
+              <a id="data-blog" href="#">.</a>
             </li>
             <li class="user-info__item">
               <svg viewBox="0 0 20 18" width="20" height="18" aria-hidden="true" class="mr-2">
@@ -78,7 +79,7 @@
                   fill="currentColor">
                 </path>
               </svg>
-              <a id="data-twitter" href="#"></a>
+              <a id="data-twitter" href="#">.</a>
             </li>
           </ul>
         </div>
